[package]
name = "pff-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.22", features = ["derive"] }
csv = "1.1.6"
itertools = "0.10.5"
meilisearch-sdk = "0.19.0"
pff = { version = "0.1.0", path = "../pff" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "sync"] }
