[package]
name = "pff-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.1.6"
itertools = "0.14"
meilisearch-sdk = "0.29"
pff = { version = "0.1.0", path = "../pff" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "sync"] }
