[package]
name = "pff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
chrono = "0.4.19"
concat-idents = "1.1.3"
itertools = "0.10.3"
num_enum = "0.5.7"
pff-sys = { version = "0.1.0", path = "../pff-sys" }
thiserror = "1.0.31"
uuid = "1.1.2"
