[package]
name = "pff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9"
chrono = "0.4.41"
codepage = "0.1.1"
concat-idents = "1.1.3"
encoding_rs = "0.8.31"
itertools = "0.14"
num_enum = "0.7.4"
pff-sys = { version = "0.1.0", path = "../pff-sys" }
thiserror = "2.0"
uuid = "1.1.2"
